# Music-Generator

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/notebooks/: explore_midi.ipynb
backend/outputs/models/: best_model.pt  final_model.pt  training_history.json  vocabulary.json
backend/src/: api.py  dataloader.py  generate.py  model.py  preprocessor.py  train.py  utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: AnimatedEqualizer.tsx  CreativeControls.tsx  EmptyState.tsx  FloatingNotes.tsx  Footer.tsx  GenerateButton.tsx  GenerationProgress.tsx  HeroSection.tsx  MidiPlayer.tsx  MoodSelector.tsx  NavLink.tsx  StatusFeedback.tsx  UserGuide.tsx
frontend/components/ui/: button.tsx  chart.tsx  sidebar.tsx
