[project]
name = "music-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "music21>=9.9.1",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "fastapi",
    "uvicorn",
    "python-multipart",
]
